--- a/k8s-roaming/hplmn/nrf/deployment.yaml
+++ b/k8s-roaming/hplmn/nrf/deployment.yaml
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
         - name: nrf
-          image: docker.io/library/nrf-local:v2.7.5
+          image: docker.io/vinch05/nrf-local:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: [ "open5gs-nrfd", "-c", "/etc/open5gs/nrf.yaml" ]
+          command: ['open5gs-nrfd', '-c', '/etc/open5gs/nrf.yaml']
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/nrf.yaml
