--- a/k8s-roaming/hplmn/sepp/deployment.yaml
+++ b/k8s-roaming/hplmn/sepp/deployment.yaml
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
         - name: sepp
-          image: docker.io/library/sepp-new-v2:v2.7.5
+          image: docker.io/vinch05/sepp-new-v2:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: [ "open5gs-seppd", "-c", "/etc/open5gs/sepp.yaml" ]
+          command: ['open5gs-seppd', '-c', '/etc/open5gs/sepp.yaml']
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/sepp.yaml
@@ -43,7 +43,7 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: sepp-config 
+            name: sepp-config
         - name: tls-n32c
           secret:
             secretName: sepp-n32c
