--- a/k8s-roaming/vplmn/scp/deployment.yaml
+++ b/k8s-roaming/vplmn/scp/deployment.yaml
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
         - name: scp
-          image: docker.io/library/scp-local:v2.7.5
+          image: docker.io/vinch05/scp-local:v2.7.5
           imagePullPolicy: Never
-          command: [ "open5gs-scpd", "-c", "/etc/open5gs/scp.yaml" ]
+          command: ['open5gs-scpd', '-c', '/etc/open5gs/scp.yaml']
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/scp.yaml
