--- a/k8s-roaming/vplmn/udm/deployment.yaml
+++ b/k8s-roaming/vplmn/udm/deployment.yaml
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
         - name: udm
-          image: docker.io/library/udm-local:v2.7.5
+          image: docker.io/vinch05/udm-local:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: [ "open5gs-udmd", "-c", "/etc/open5gs/udm.yaml" ]
+          command: ['open5gs-udmd', '-c', '/etc/open5gs/udm.yaml']
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/udm.yaml
