remove -local in deployment image names

--- a/k8s-roaming/vplmn/amf/deployment.yaml
+++ b/k8s-roaming/vplmn/amf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: amf
-          image: docker.io/vinch05/amf-local:v2.7.5
+          image: docker.io/vinch05/amf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-amfd', '-c', '/etc/open5gs/amf.yaml']
           volumeMounts:
