--- a/k8s-roaming/vplmn/smf/deployment.yaml
+++ b/k8s-roaming/vplmn/smf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: smf
-          image: docker.io/vinch05/smf-local:v2.7.5
+          image: docker.io/vinch05/smf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-smfd', '-c', '/etc/open5gs/smf.yaml']
           volumeMounts:
