--- a/k8s-roaming/hplmn/nrf/deployment.yaml
+++ b/k8s-roaming/hplmn/nrf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: nrf
-          image: docker.io/vinch05/nrf-local:v2.7.5
+          image: docker.io/vinch05/nrf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-nrfd', '-c', '/etc/open5gs/nrf.yaml']
           volumeMounts:
