--- a/k8s-roaming/hplmn/scp/deployment.yaml
+++ b/k8s-roaming/hplmn/scp/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: scp
-          image: docker.io/vinch05/scp-local:v2.7.5
+          image: docker.io/vinch05/scp:v2.7.5
           imagePullPolicy: Never
           command: ['open5gs-scpd', '-c', '/etc/open5gs/scp.yaml']
           volumeMounts:
