--- a/k8s-roaming/vplmn/bsf/deployment.yaml
+++ b/k8s-roaming/vplmn/bsf/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: bsf
-          image: docker.io/vinch05/bsf-local:v2.7.5
+          image: docker.io/vinch05/bsf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-bsfd', '-c', '/etc/open5gs/bsf.yaml']
           volumeMounts:
