renew dockerfiles in images

--- a/configs/roaming/packetrusher.yaml
+++ b/configs/roaming/packetrusher.yaml
@@ -1,32 +1,33 @@
 gnodeb:
   controlif:
-    ip: 'gnb.packetrusher.org'
+    ip: "gnb.packetrusher.org"
     port: 38412
   dataif:
-    ip: 'gnb.packetrusher.org'
+    ip: "gnb.packetrusher.org"
     port: 2152
   plmnlist:
-    mcc: '999'
-    mnc: '70'
-    tac: '000001'
-    gnbid: '000008'
+    mcc: "999"
+    mnc: "70"
+    tac: "000001"
+    gnbid: "000008"
   slicesupportlist:
-    sst: '01'
-    sd: '000001'
+    sst: "01"
+    sd: "000001"
 
 ue:
   hplmn:
-    mcc: '001'
-    mnc: '01'
-  msin: '1234567891'
-  key: '7F176C500D47CF2090CB6D91F4A73479'
-  opc: '3D45770E83C7BBB6900F3653FDA6330F'
-  dnn: 'internet'
+    mcc: "001"
+    mnc: "01"
+  msin: "1234567891"
+  key: "00000000000000000000000000000000"
+  opc: "00000000000000000000000000000000"
+  dnn: "internet"
   snssai:
     sst: 01
-    sd: '000001'
-  amf: '8000'
-  sqn: '00000000'
+    sd: "000001"
+  amf: "8000"
+  sqn: "00000000"
+  routingindicator: "0000"
   protectionScheme: 0
   integrity:
     nia0: false
@@ -40,7 +41,7 @@ ue:
     nea3: false
 
 amfif:
-  - ip: 'amf.5gc.mnc070.mcc999.3gppnetwork.org'
+  - ip: "amf.5gc.mnc070.mcc999.3gppnetwork.org"
     port: 38412
 logs:
   level: 4
