--- a/k8s-roaming/hplmn/udr/configmap.yaml
+++ b/k8s-roaming/hplmn/udr/configmap.yaml
@@ -5,14 +5,14 @@ metadata:
   namespace: hplmn
 data:
   udr.yaml: |
-    db_uri: mongodb://mongodb.hplmn.svc.cluster.local/open5gs
+    db_uri: mongodb://mongodb.hplmn.svc.cluster.local:27017/open5gs
 
     logger:
       file:
         path: /var/log/open5gs/udr.log
 
     global:
- 
+
     udr:
       sbi:
         server:
