--- a/k8s-roaming/hplmn/udr/configmap.yaml
+++ b/k8s-roaming/hplmn/udr/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: hplmn
 data:
   udr.yaml: |
-    db_uri: mongodb://mongodb.hplmn.svc.cluster.local:27017/open5gs
+    db_uri: mongodb://mongodb.hplmn.svc.cluster.local/open5gs
 
     logger:
       file:
