--- a/k8s-roaming/hplmn/mongodb/service.yaml
+++ b/k8s-roaming/hplmn/mongodb/service.yaml
@@ -3,12 +3,37 @@ kind: Service
 metadata:
   name: mongodb
   namespace: hplmn
+  labels:
+    app: mongodb
+    component: database
+    part-of: open5gs
 spec:
-  type: NodePort
+  type: ClusterIP
+  ports:
+    - port: 27017
+      targetPort: 27017
+      protocol: TCP
+      name: mongodb
   selector:
     app: mongodb
+---
+# Headless service for StatefulSet
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-headless
+  namespace: hplmn
+  labels:
+    app: mongodb
+    component: database
+    part-of: open5gs
+spec:
+  type: ClusterIP
+  clusterIP: None
   ports:
-    - protocol: TCP
-      port: 27017
+    - port: 27017
       targetPort: 27017
-      nodePort: 30017
+      protocol: TCP
+      name: mongodb
+  selector:
+    app: mongodb
