added internet in dnn

--- a/k8s-roaming/vplmn/smf/configmap.yaml
+++ b/k8s-roaming/vplmn/smf/configmap.yaml
@@ -33,6 +33,7 @@ data:
       session:
         - subnet: 10.45.0.0/16
           gateway: 10.45.0.1
+          dnn: internet
       dns:
         - 8.8.8.8
         - 8.8.4.4
