--- a/k8s-roaming/vplmn/sepp/service.yaml
+++ b/k8s-roaming/vplmn/sepp/service.yaml
@@ -18,6 +18,7 @@ metadata:
   name: sepp-n32c
   namespace: vplmn
 spec:
+  type: NodePort
   selector:
     app: sepp
   ports:
@@ -25,6 +26,7 @@ spec:
       protocol: TCP
       port: 7778
       targetPort: 7778
+      nodePort: 30001
 ---
 apiVersion: v1
 kind: Service
@@ -32,6 +34,7 @@ metadata:
   name: sepp-n32f
   namespace: vplmn
 spec:
+  type: NodePort
   selector:
     app: sepp
   ports:
@@ -39,3 +42,4 @@ spec:
       protocol: TCP
       port: 7779
       targetPort: 7779
+      nodePort: 30002
