--- a/k8s-roaming/hplmn/ausf/configmap.yaml
+++ b/k8s-roaming/hplmn/ausf/configmap.yaml
@@ -18,5 +18,5 @@ data:
           - dev: eth0
             advertise: ausf.5gc.mnc001.mcc001.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc001.mcc001.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org
