--- a/k8s-roaming/hplmn/udr/configmap.yaml
+++ b/k8s-roaming/hplmn/udr/configmap.yaml
@@ -19,5 +19,5 @@ data:
           - dev: eth0
             advertise: udr.5gc.mnc001.mcc001.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc001.mcc001.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org
