--- a/k8s-roaming/vplmn/pcf/configmap.yaml
+++ b/k8s-roaming/vplmn/pcf/configmap.yaml
@@ -19,8 +19,8 @@ data:
           - dev: eth0
             advertise: pcf.5gc.mnc070.mcc999.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org
       policy:
         - plmn_id:
             mcc: 001
