--- a/k8s-roaming/vplmn/smf/configmap.yaml
+++ b/k8s-roaming/vplmn/smf/configmap.yaml
@@ -17,8 +17,8 @@ data:
           - dev: eth0
             advertise: smf.5gc.mnc070.mcc999.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org
       pfcp:
         server:
           - dev: eth0
