--- a/k8s-roaming/vplmn/amf/configmap.yaml
+++ b/k8s-roaming/vplmn/amf/configmap.yaml
@@ -18,8 +18,8 @@ data:
           - dev: eth0
             advertise: amf.5gc.mnc070.mcc999.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org
       ngap:
         server:
           - dev: eth0
