--- a/k8s-roaming/vplmn/sepp/configmap.yaml
+++ b/k8s-roaming/vplmn/sepp/configmap.yaml
@@ -19,8 +19,8 @@ data:
             advertise: sepp.5gc.mnc070.mcc999.3gppnetwork.org
             port: 80
         client:
-          scp:
-            - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org
       n32:
         server:
           - sender: sepp1.5gc.mnc070.mcc999.3gppnetwork.org
