--- a/k8s-roaming/vplmn/udr/configmap.yaml
+++ b/k8s-roaming/vplmn/udr/configmap.yaml
@@ -19,5 +19,5 @@ data:
           - dev: eth0
             advertise: udr.5gc.mnc070.mcc999.3gppnetwork.org
         client:
-          scp:
-            - uri: http://scp.5gc.mnc070.mcc999.3gppnetwork.org
+          nrf:
+            - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org
