--- a/k8s-roaming/vplmn/sepp/deployment.yaml
+++ b/k8s-roaming/vplmn/sepp/deployment.yaml
@@ -18,6 +18,13 @@ spec:
           image: docker.io/vinch05/sepp:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-seppd', '-c', '/etc/open5gs/sepp.yaml']
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "10Gi"
+              cpu: "500m"
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/sepp.yaml
