--- a/k8s-roaming/vplmn/upf/deployment.yaml
+++ b/k8s-roaming/vplmn/upf/deployment.yaml
@@ -34,6 +34,13 @@ spec:
           image: docker.io/vinch05/upf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-upfd', '-c', '/etc/open5gs/upf.yaml']
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "4Gi"
+              cpu: "500m"
           securityContext:
             privileged: true
             capabilities:
