--- a/k8s-roaming/vplmn/nssf/deployment.yaml
+++ b/k8s-roaming/vplmn/nssf/deployment.yaml
@@ -18,6 +18,13 @@ spec:
           image: docker.io/vinch05/nssf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-nssfd', '-c', '/etc/open5gs/nssf.yaml']
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "4Gi"
+              cpu: "500m"
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/nssf.yaml
