changes in storage

--- a/k8s-roaming/hplmn/sepp/configmap.yaml
+++ b/k8s-roaming/hplmn/sepp/configmap.yaml
@@ -11,6 +11,8 @@ data:
       level: trace  # fatal|error|warn|info(default)|debug|trace
 
     global:
+      max:
+        ue: 100000
 
     sepp:
       sbi:
