--- a/k8s-roaming/vplmn/amf/deployment.yaml
+++ b/k8s-roaming/vplmn/amf/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: amf
           image: docker.io/vinch05/amf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-amfd', '-c', '/etc/open5gs/amf.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "10Gi"
-              cpu: "500m"
+          command: ["open5gs-amfd", "-c", "/etc/open5gs/amf.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/amf.yaml
