--- a/k8s-roaming/hplmn/ausf/deployment.yaml
+++ b/k8s-roaming/hplmn/ausf/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: ausf
           image: docker.io/vinch05/ausf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-ausfd', '-c', '/etc/open5gs/ausf.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-ausfd", "-c", "/etc/open5gs/ausf.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/ausf.yaml
