--- a/k8s-roaming/hplmn/scp/deployment.yaml
+++ b/k8s-roaming/hplmn/scp/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: scp
           image: docker.io/vinch05/scp:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-scpd', '-c', '/etc/open5gs/scp.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-scpd", "-c", "/etc/open5gs/scp.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/scp.yaml
