--- a/k8s-roaming/hplmn/udr/deployment.yaml
+++ b/k8s-roaming/hplmn/udr/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: udr
           image: docker.io/vinch05/udr:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-udrd', '-c', '/etc/open5gs/udr.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-udrd", "-c", "/etc/open5gs/udr.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/udr.yaml
