--- a/k8s-roaming/vplmn/bsf/deployment.yaml
+++ b/k8s-roaming/vplmn/bsf/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: bsf
           image: docker.io/vinch05/bsf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-bsfd', '-c', '/etc/open5gs/bsf.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-bsfd", "-c", "/etc/open5gs/bsf.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/bsf.yaml
