--- a/k8s-roaming/vplmn/nssf/deployment.yaml
+++ b/k8s-roaming/vplmn/nssf/deployment.yaml
@@ -17,14 +17,8 @@ spec:
         - name: nssf
           image: docker.io/vinch05/nssf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-nssfd', '-c', '/etc/open5gs/nssf.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-nssfd", "-c", "/etc/open5gs/nssf.yaml"]
+
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/nssf.yaml
