--- a/k8s-roaming/vplmn/pcf/deployment.yaml
+++ b/k8s-roaming/vplmn/pcf/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: pcf
           image: docker.io/vinch05/pcf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-pcfd', '-c', '/etc/open5gs/pcf.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-pcfd", "-c", "/etc/open5gs/pcf.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/pcf.yaml
