--- a/k8s-roaming/vplmn/udm/deployment.yaml
+++ b/k8s-roaming/vplmn/udm/deployment.yaml
@@ -17,14 +17,7 @@ spec:
         - name: udm
           image: docker.io/vinch05/udm:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ['open5gs-udmd', '-c', '/etc/open5gs/udm.yaml']
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "4Gi"
-              cpu: "500m"
+          command: ["open5gs-udmd", "-c", "/etc/open5gs/udm.yaml"]
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/udm.yaml
