improve validation in contests api, improve error message on validation

--- a/k8s-roaming/vplmn/amf/deployment.yaml
+++ b/k8s-roaming/vplmn/amf/deployment.yaml
@@ -17,7 +17,14 @@ spec:
         - name: amf
           image: docker.io/vinch05/amf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ["open5gs-amfd", "-c", "/etc/open5gs/amf.yaml"]
+          command: ['open5gs-amfd', '-c', '/etc/open5gs/amf.yaml']
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/amf.yaml
