--- a/k8s-roaming/vplmn/nrf/deployment.yaml
+++ b/k8s-roaming/vplmn/nrf/deployment.yaml
@@ -17,15 +17,21 @@ spec:
         - name: nrf
           image: docker.io/vinch05/nrf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ["open5gs-nrfd", "-c", "/etc/open5gs/nrf.yaml"]
-
+          command: ['open5gs-nrfd', '-c', '/etc/open5gs/nrf.yaml']
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/nrf.yaml
               subPath: nrf.yaml
           ports:
             - containerPort: 80
-              name: http
+              name: sbi
       volumes:
         - name: config
           configMap:
