--- a/k8s-roaming/hplmn/sepp/deployment.yaml
+++ b/k8s-roaming/hplmn/sepp/deployment.yaml
@@ -17,7 +17,14 @@ spec:
         - name: sepp
           image: docker.io/vinch05/sepp:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ["open5gs-seppd", "-c", "/etc/open5gs/sepp.yaml"]
+          command: ['open5gs-seppd', '-c', '/etc/open5gs/sepp.yaml']
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/sepp.yaml
