--- a/k8s-roaming/vplmn/bsf/deployment.yaml
+++ b/k8s-roaming/vplmn/bsf/deployment.yaml
@@ -17,7 +17,14 @@ spec:
         - name: bsf
           image: docker.io/vinch05/bsf:v2.7.5
           imagePullPolicy: IfNotPresent
-          command: ["open5gs-bsfd", "-c", "/etc/open5gs/bsf.yaml"]
+          command: ['open5gs-bsfd', '-c', '/etc/open5gs/bsf.yaml']
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/bsf.yaml
