--- a/k8s-roaming/hplmn/scp/deployment.yaml
+++ b/k8s-roaming/hplmn/scp/deployment.yaml
@@ -31,7 +31,7 @@ spec:
               subPath: scp.yaml
           ports:
             - containerPort: 80
-              name: sbi
+              name: http
       volumes:
         - name: config
           configMap:
