--- a/k8s-roaming/hplmn/webui/deployment.yaml
+++ b/k8s-roaming/hplmn/webui/deployment.yaml
@@ -32,3 +32,10 @@ spec:
           ports:
             - containerPort: 9999
               name: http
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
