--- a/k8s-roaming/vplmn/smf/deployment.yaml
+++ b/k8s-roaming/vplmn/smf/deployment.yaml
@@ -18,13 +18,6 @@ spec:
           image: docker.io/vinch05/smf:v2.7.5
           imagePullPolicy: IfNotPresent
           command: ['open5gs-smfd', '-c', '/etc/open5gs/smf.yaml']
-          resources:
-            requests:
-              cpu: '5m'
-              memory: '512Mi'
-            limits:
-              cpu: '10m'
-              memory: '5Gi'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/smf.yaml
@@ -32,8 +25,17 @@ spec:
           ports:
             - containerPort: 80
               name: sbi
+              protocol: TCP
             - containerPort: 8805
               name: pfcp
+              protocol: UDP
+          resources:
+            requests:
+              cpu: '5m'
+              memory: '512Mi'
+            limits:
+              cpu: '10m'
+              memory: '5Gi'
       volumes:
         - name: config
           configMap:
