--- a/k8s-roaming/vplmn/ausf/deployment.yaml
+++ b/k8s-roaming/vplmn/ausf/deployment.yaml
@@ -20,11 +20,11 @@ spec:
           command: ['open5gs-ausfd', '-c', '/etc/open5gs/ausf.yaml']
           resources:
             requests:
-              memory: "512Mi"
-              cpu: "250m"
+              memory: '512Mi'
+              cpu: '250m'
             limits:
-              memory: "4Gi"
-              cpu: "500m"
+              memory: '4Gi'
+              cpu: '500m'
           volumeMounts:
             - name: config
               mountPath: /etc/open5gs/ausf.yaml
